--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
             </div>
             <div class="food-card-wraper">
                 <div class="food-card">
-                    <img src="/img/svg/services1.svg" alt="">
+                    <img src="img/svg/services1.svg" alt="">
                     <h2><a href="#" class="card-link">healthy meals</a></h2>
                     <p>Get healthy meals that satisfy your hunger and imporve your health.</p>
                 </div>
                 <div class="food-card">
-                    <img src="/img/svg/services2.svg" alt="">
+                    <img src="img/svg/services2.svg" alt="">
                     <h2><a href="#" class="card-link">fast food</a></h2>
                     <p>Eat fast food for that you always crave.</p>
                 </div>
                 <div class="food-card">
-                    <img src="/img/svg/services3.svg" alt="">
+                    <img src="img/svg/services3.svg" alt="">
                     <h2><a href="#" class="card-link">delicious cofee</a></h2>
                     <p>Get delicious coffee with great taste and boost your energy.</p>
                 </div>
