--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </nav>
                 <div class="desc">
                     <div>
-                        <h1 class="h1 anime-h1">Meat, Eat and Enjoy the true taste</h1>
+                        <h1 class="h1 anime-h1">Meet, Eat and Enjoy the true taste</h1>
                         <p class="p anime-p">Making a Reservation at Delecious Restaurant is easy and take just a couple of minuts</p>
                     </div>
                     <div>
